@@ -77,6 +77,10 @@ What's new in Sudo 1.8.7?
  * On HP-UX systems, sudo will now use the pstat() function to
    determine the tty instead of ttyname().
 
+ * Turkish translation for sudo from translationproject.org.
+
+ * Dutch translation for sudo and sudoers from translationproject.org.
+
 What's new in Sudo 1.8.6p7?
 
  * A time stamp file with the date set to the epoch by "sudo -k"
